# mkwikidata

./: .gitignore  LICENSE  README.rst  README_DEV.txt  pyproject.toml
mkwikidata/: __init__.py
tests/: __init__.py
